# lumina-project

./: .env.example  COMMITS.md  CONTRACT_DEPLOYMENT.md  LEVEL2_CHECKLIST.md  LEVEL2_STEP_BY_STEP.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
app/: globals.css  layout.tsx  page.tsx
components/: chat-drawer.tsx  contract-explorer.tsx  error-boundary.tsx  grant-card.tsx  impact-feed.tsx  navbar.tsx
contexts/: wallet-context.tsx
contract/: Cargo.toml
contract/.cargo/: config.toml
contract/.soroban/identity/: tushar-testnet.toml
contract/src/: lib.rs
contract/src/.soroban/identity/: tushar-testnet.toml
hooks/: use-contract-events.ts  use-transaction-tracker.ts
services/: contract-service.ts  error-handler.ts  transaction-tracker.ts
