[package]
name = "lumina_contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "21", default-features = false }
[profile.release]
opt-level = "z"
overflow-checks = true
debug = false
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true